update instructions w/ 5 second timer delay

--- a/templates/photos.html
+++ b/templates/photos.html
@@ -216,7 +216,7 @@
         var imageClassName = (viewCount == 0) ? " front-image" : " side-image";
         var d = document.getElementById("sample-image");
         d.className += imageClassName;
-        var sideInstructionalText = " Make sure you are seated, sitting as straight as possible and are not wearing baggy clothing. <br /> Then take a picture of your torso while holding a credit card perpendicular against your waist, making sure it  is as shown in the example below! <br /> Extend your arms out at a 45 degree angle, entusre the neck, chest and waist are clearly visible and try to center the credit card on-screen as much as possible.<br /> Press the 'Take Photo' button below once you've got your pose right! You'll have three seconds to fix your pose.";
+        var sideInstructionalText = " Make sure you are seated, sitting as straight as possible and are not wearing baggy clothing. <br /> Then take a picture of your torso while holding a credit card perpendicular against your waist, making sure it  is as shown in the example below! <br /> Extend your arms out at a 45 degree angle, entusre the neck, chest and waist are clearly visible and try to center the credit card on-screen as much as possible.<br /> Press the 'Take Photo' button when you are ready-- it will give you five seconds to fix your pose, just in case.";
         document.getElementById("instruction-text").innerHTML = sideInstructionalText;
 
         // debug
