--- a/templates/photos.html
+++ b/templates/photos.html
@@ -6,15 +6,14 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/css/introjs.min.css">
     <link rel="stylesheet" href="/static/css/main.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
 
-    <script>
-
-    </script>
+    <script type='text/javascript' src='/static/js/intro.min.js'></script>
 </head>
 
 <body>
@@ -40,11 +39,11 @@
             Then take a picture of your torso while holding a credit card flat against your chest, making sure it is parallel to your body as shown in the example below!
 
             <br />
-            Extend your arms out at a 45 degree angle, entusre the neck, chest and waist are clearly visible and try to center the credit card on-screen as much as possible.
+            Extend your arms out at a 45 degree angle, ensure the neck, chest and waist are clearly visible and try to center the credit card on-screen as much as possible.
 
             <br />
 
-            Press the "Take Photo" button below once you've got your pose right! You'll have three seconds to fix your pose.
+            Press the "Take Photo" button below once you've got your pose right! You'll have five seconds to fix your pose.
 
         </p>
         <div class="column-view-div">
@@ -192,6 +191,30 @@
                 success: success,
                 error: error
             });
+
+        // Walkthrough Part 2
+        var intro = introJs();
+          intro.setOptions({
+            steps: [
+              {
+                element: '#sample-image',
+                intro: "You know the drill! Sit up straight and no baggy clothes!",
+                position: 'top'
+              },
+              {
+                element: '#videoElement',
+                intro: "Posing Time- Round 2! Hold the credit card perpendicular against your waist this time, like in this example photo. Make sure your neck, chest and waist are visible in the shot!",
+                position: 'top'
+              },
+              {
+                element: '#snap',
+                intro: 'Press the "Take Photo" button once you have your pose right! It will give you five seconds to fix your pose.',
+                position: 'top'
+              },
+            ]
+          });
+          intro.start();
+
         }
         if (viewCount == 1) {
             document.getElementById("snap").disabled = true
@@ -285,4 +308,30 @@
         setTimeout(function() { takePhotoButton.innerHTML = "2"; }, 3000);
         setTimeout(function() { takePhotoButton.innerHTML = "1"; }, 4000);
     }; // btn.onClick
+
+    // Walkthrough part 1
+    var intro = introJs();
+      intro.setOptions({
+        steps: [
+          { 
+            intro: "Welcome to Contour! If you're new, this short tutorial will walk you through how to quickly take your measurements. If you're not, welcome back! Feel free to hit skip and get right on into it!"
+          },
+          {
+            element: '#sample-image',
+            intro: "Let's get started! Take a seat, sit up straight and make sure you aren't wearing any baggy clothing.",
+            position: 'top'
+          },
+          {
+            element: '#videoElement',
+            intro: "Posing Time! Make sure your neck, chest and waist are visible in the shot and hold a credit card flat against your chest, making sure it is parallel to your body as shown in the example to the left!",
+            position: 'top'
+          },
+          {
+            element: '#snap',
+            intro: 'Press the "Take Photo" button once you have your pose right! It will give you five seconds to fix your pose.',
+            position: 'top'
+          },
+        ]
+      });
+      intro.start();
 </script>
