--- a/templates/index.html
+++ b/templates/index.html
@@ -52,10 +52,11 @@
             </p>
         </div>
         <div id="video-section">
-        <video preload="none" id="tutorial-video" width="720" height="480" controls poster="/static/videos/poster.png">
-          <source src="/static/videos/tutorial.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+            <iframe id="intro-video-iframe" width="720" height="480" src="https://www.youtube.com/embed/WXbnVWvbNyQ" frameborder="0" allowfullscreen></iframe>
+<!--             <video preload="none" id="tutorial-video" width="720" height="480" controls poster="/static/videos/poster.png">
+                <source src="/static/videos/tutorial.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video> -->
         </div>
     </div>
 </body>
