cannot click photo button while in tutorial anymore

--- a/templates/photos.html
+++ b/templates/photos.html
@@ -332,6 +332,6 @@
             position: 'top'
           },
         ]
-      });
+      }).setOption('exitOnOverlayClick', true).setOption('exitOnEsc', true).setOption('disableInteraction', true);
       intro.start();
 </script>
