fixed button spamming on second page too

--- a/templates/photos.html
+++ b/templates/photos.html
@@ -213,7 +213,7 @@
                 position: 'top'
               },
             ]
-          });
+          }).setOption('exitOnOverlayClick', true).setOption('exitOnEsc', true).setOption('disableInteraction', true);;
           intro.start();
 
         }
